--- a/src/MyShowtime.Client/Layout/MainLayout.razor
+++ b/src/MyShowtime.Client/Layout/MainLayout.razor
@@ -3,8 +3,7 @@
 <div class="app-shell">
     <header class="app-header">
         <div class="brand">
-            <span class="brand-title">Bonnie's Showtime</span>
-            <span class="brand-subtitle">MyShowtime Web Companion</span>
+            <span class="brand-title">MyShowtime Web Companion</span>
         </div>
         <div class="header-actions">
             <a href="https://www.themoviedb.org/" target="_blank" rel="noreferrer noopener">Powered by TMDB</a>
